@@ -274,6 +274,22 @@ name|hdfs
 operator|.
 name|protocol
 operator|.
+name|QuotaByStorageTypeExceededException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|protocol
+operator|.
 name|QuotaExceededException
 import|;
 end_import
@@ -4908,6 +4924,299 @@ argument_list|()
 operator|.
 name|getYieldCount
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+comment|/**    * Test quota by storage type.    */
+annotation|@
+name|Test
+DECL|method|testQuotaByStorageType ()
+specifier|public
+name|void
+name|testQuotaByStorageType
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|Configuration
+name|conf
+init|=
+operator|new
+name|HdfsConfiguration
+argument_list|()
+decl_stmt|;
+comment|// set a smaller block size so that we can test with smaller
+comment|// diskspace quotas
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_BLOCK_SIZE_KEY
+argument_list|,
+literal|"512"
+argument_list|)
+expr_stmt|;
+comment|// Make it relinquish locks. When run serially, the result should
+comment|// be identical.
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_CONTENT_SUMMARY_LIMIT_KEY
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+specifier|final
+name|MiniDFSCluster
+name|cluster
+init|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|2
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+specifier|final
+name|FileSystem
+name|fs
+init|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Not a HDFS: "
+operator|+
+name|fs
+operator|.
+name|getUri
+argument_list|()
+argument_list|,
+name|fs
+operator|instanceof
+name|DistributedFileSystem
+argument_list|)
+expr_stmt|;
+specifier|final
+name|DistributedFileSystem
+name|dfs
+init|=
+operator|(
+name|DistributedFileSystem
+operator|)
+name|fs
+decl_stmt|;
+try|try
+block|{
+name|int
+name|fileLen
+init|=
+literal|1024
+decl_stmt|;
+name|short
+name|replication
+init|=
+literal|3
+decl_stmt|;
+name|int
+name|fileSpace
+init|=
+name|fileLen
+operator|*
+name|replication
+decl_stmt|;
+specifier|final
+name|Path
+name|quotaDir20
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/nqdir0/qdir1/qdir20"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|dfs
+operator|.
+name|mkdirs
+argument_list|(
+name|quotaDir20
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|setQuota
+argument_list|(
+name|quotaDir20
+argument_list|,
+name|HdfsConstants
+operator|.
+name|QUOTA_DONT_SET
+argument_list|,
+literal|6
+operator|*
+name|fileSpace
+argument_list|)
+expr_stmt|;
+comment|// Verify DirectoryWithQuotaFeature's storage type usage
+comment|// is updated properly after deletion.
+comment|// File creation followed by deletion shouldn't change storage type
+comment|// usage regardless whether storage policy is set.
+name|Path
+name|file
+init|=
+operator|new
+name|Path
+argument_list|(
+name|quotaDir20
+argument_list|,
+literal|"fileDir/file1"
+argument_list|)
+decl_stmt|;
+name|DFSTestUtil
+operator|.
+name|createFile
+argument_list|(
+name|dfs
+argument_list|,
+name|file
+argument_list|,
+name|fileLen
+operator|*
+literal|3
+argument_list|,
+name|replication
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|delete
+argument_list|(
+name|file
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|setStoragePolicy
+argument_list|(
+name|quotaDir20
+argument_list|,
+name|HdfsConstants
+operator|.
+name|HOT_STORAGE_POLICY_NAME
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|setQuotaByStorageType
+argument_list|(
+name|quotaDir20
+argument_list|,
+name|StorageType
+operator|.
+name|DEFAULT
+argument_list|,
+literal|2
+operator|*
+name|fileSpace
+argument_list|)
+expr_stmt|;
+name|boolean
+name|hasException
+init|=
+literal|false
+decl_stmt|;
+try|try
+block|{
+name|DFSTestUtil
+operator|.
+name|createFile
+argument_list|(
+name|dfs
+argument_list|,
+name|file
+argument_list|,
+name|fileLen
+operator|*
+literal|3
+argument_list|,
+name|replication
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|QuotaByStorageTypeExceededException
+name|e
+parameter_list|)
+block|{
+name|hasException
+operator|=
+literal|true
+expr_stmt|;
+block|}
+name|assertTrue
+argument_list|(
+name|hasException
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|delete
+argument_list|(
+name|file
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|setQuotaByStorageType
+argument_list|(
+name|quotaDir20
+argument_list|,
+name|StorageType
+operator|.
+name|DEFAULT
+argument_list|,
+literal|6
+operator|*
+name|fileSpace
 argument_list|)
 expr_stmt|;
 block|}
